--- a/src/main/resources/templates/account/password-init.html
+++ b/src/main/resources/templates/account/password-init.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>키움증권 관리자 패스워드 변경</title>
+    <title>관리자 패스워드 변경</title>
 
     <!-- Custom fonts for this template-->
     <link href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -24,7 +24,7 @@
         <div class="card-body">
             <div class="text-center mb-4">
                 <h4>패스워드 초기화</h4>
-                <p>내부망 이메일 주소 입력 후, 버튼을 눌러 이메일로 패스워드 초기화 안내를 받으세요.</p>
+                <p>이메일 주소 입력 후, 버튼을 눌러 이메일로 패스워드 초기화 안내를 받으세요.</p>
             </div>
             <form name="passwordInitForm" id="passwordInitForm" th:action="@{/password-init}" method="post">
                 <div th:if="${error != null}" class="alert alert-danger" role="alert">
