--- a/src/main/resources/templates/account/password.html
+++ b/src/main/resources/templates/account/password.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>키움증권 관리자 패스워드 변경</title>
+    <title>관리자 패스워드 변경</title>
 
     <!-- Custom fonts for this template-->
     <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css" type="text/css" />
@@ -21,7 +21,7 @@
 <body class="bg-dark">
 <div class="container">
     <div class="card card-login mx-auto mt-5">
-        <div class="card-header">키움증권 관리자 패스워드 변경</div>
+        <div class="card-header">관리자 패스워드 변경</div>
         <div class="card-body">
             <form name="loginForm" class="needs-validation" id="loginForm"
                   th:action="@{/password-change}" th:object="${passwordChangeForm}" method="post" novalidate>
@@ -40,7 +40,7 @@
                                th:value="${#authentication.name}" class="form-control"
                                placeholder="Email address" aria-describedby="emailHelp" required/>
                         <label for="email">Email address</label>
-                        <small id="emailHelp" class="form-text text-muted">키움증권 내부망 이메일을 입력하세요.</small>
+                        <small id="emailHelp" class="form-text text-muted"이메일을 입력하세요.</small>
                         <small class="invalid-feedback">이메일을 입력하세요.</small>
                     </div>
                 </div>
