--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>키움증권 관리자 로그인</title>
+    <title>관리자 로그인</title>
 
     <!-- Custom fonts for this template-->
     <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css" type="text/css" />
@@ -19,7 +19,7 @@
 <body class="bg-dark">
     <div class="container">
         <div class="card card-login mx-auto mt-5">
-            <div class="card-header">키움증권 관리자 로그인</div>
+            <div class="card-header">관리자 로그인</div>
             <div class="card-body">
                 <form name="loginForm" class="needs-validation" id="loginForm"
                       th:action="@{/login}" method="post" novalidate>
