--- a/src/main/resources/templates/mail/simple-link.html
+++ b/src/main/resources/templates/mail/simple-link.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>키움증권 관리자 패스워드 초기화</title>
+    <title>관리자 패스워드 초기화</title>
 </head>
 <body>
     <div>
@@ -17,7 +17,7 @@
         </div>
     </div>
     <footer>
-        <small>키움증권 관리자&copy; 2020</small>
+        <small>관리자&copy; 2020</small>
     </footer>
 </body>
 </html>
