--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>키움증권 관리자페이지</title>
+    <title>관리자페이지</title>
 
     <!-- Custom fonts for this template-->
     <link th:href="@{/node_modules/@fontawesome/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
